# s3dsemu

./: CMakeLists.txt  Makefile  devkitpro_toolchain.cmake
include/: input.h  memory.h  render.h
src/: input.cpp  input.h  main.cpp  main.h  memory.cpp  render.cpp
src/gpu/: gpu.cpp  gpu.h
